--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
         <div><p class="secondNum bin"></p></div>
     </form>
     <div class="output">
-        <p class="output_text"></p>
+        <div class="recovery">
+            <p class="rec">Деление с востановлением остатка</p>
+            <p class="output_text"></p>
+        </div>
+        <div class="not_recovery">
+            <p class="not_rec">Деление без востановления остатка</p>
+            <p class="output_text"></p>
+        </div>
+    </div>
+    <div class="error">
+        <p class="text_error">Ошибка<p>
+        <p class="output_error"></p>
     </div>
     <script src="main.js"></script>
 </body>
