--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <form class="input">
         <div>
-            <label>Первое число:</label>
+            <label>Делимое:</label>
             <input type="text" id="firstNum">
         </div>
         <div>
-            <label>Второе число:</label>
+            <label>Делитель:</label>
             <input type="text" id="secondNum">
         </div>
     </form>
@@ -41,6 +41,7 @@
         <p class="text_error">Ошибка<p>
         <p class="output_error"></p>
     </div>
+    <div class="button" onclick="calculateAndDisplayResult()"><span>Вычислить</span></div>
     <script src="main.js"></script>
 </body>
 </html>
