--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
     </div>
     <div class="button" onclick="calculateAndDisplayResult()"><span>Вычислить</span></div>
     <script src="main.js"></script>
+    <!-- <script src="test.js"></script> -->
 </body>
 </html>
