--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div class="output">
         <div class="recovery">
             <p class="rec">Деление с востановлением остатка</p>
-            <p class="output_text"></p>
+            <pre class="output_text"></pre>
         </div>
         <div class="not_recovery">
             <p class="not_rec">Деление без востановления остатка</p>
-            <p class="output_text"></p>
+            <pre class="output_text"></pre>
         </div>
     </div>
     <div class="error">
@@ -42,7 +42,7 @@
         <p class="output_error"></p>
     </div>
     <div class="button" onclick="calculateAndDisplayResult()"><span>Вычислить</span></div>
-    <script src="main.js"></script>
-    <!-- <script src="test.js"></script> -->
+    <!-- <script src="main.js"></script> -->
+    <script src="test.js"></script>
 </body>
 </html>
